--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     height:120px;
 }
 
-.more{
+#more{
     background-color: rgb(177, 177, 177);
     border-width: 2px;
     border-color: black;
@@ -25,4 +25,13 @@ img{
 body{
     background-color: rgba(179, 179, 179, 0.37);
     font-family: 'Playfair Display', serif;
+}
+
+button{
+    margin-top:20px;
+    margin-bottom:20px;
+    border-width:2px;
+    border-color:black;
+    border-style:solid;
+
 }
